webapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: api-routes
  labels:
    app: webapp
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: webapp
