webapp/base/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: api-routes
  labels:
    app: webapp
spec:
  type: ExternalName
  externalName: webapp.chart.svc.cluster.local
