webapp/base/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: webapp
  namespace: webapp
spec:
  host: webapp-chart
  subsets:
  - name: v1
    labels:
      version: v1
